# diskcopilot-cli

./: CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
.superpowers/brainstorm/3542-1775182233/state/: server-stopped
diskcopilot.yazi/: README.md  main.lua
docs/: scanning-algorithm.md  yazi-architecture.md
docs/superpowers/plans/: 2026-04-03-diskcopilot-v1.md
docs/superpowers/specs/: 2026-04-03-diskcopilot-design.md
src/: format.rs  lib.rs  main.rs  output.rs  safelist.rs  server.rs
src/cache/: mod.rs  reader.rs  schema.rs  writer.rs
src/config/: loader.rs
src/delete/: trash.rs
src/scanner/: bulk_walker.rs  metadata.rs  mod.rs  safety.rs  walker.rs
src/templates/: cleanup.html
src/tui/: app.rs  detail.rs  event.rs  icons.rs  mod.rs  search.rs  statusbar.rs  tabs.rs  theme.rs  tree.rs  views.rs
tests/: query_test.rs  roundtrip_test.rs  scanner_test.rs
themes/: dark.toml
