[package]
name = "diskcopilot"
version = "0.1.0"
edition = "2021"
description = "Fast, accurate Mac disk scanner with interactive TUI"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }

# Scanning
jwalk = "0.8"

# Cache
rusqlite = { version = "0.31", features = ["bundled"] }

# TUI
ratatui = "0.28"
crossterm = "0.28"
tui-tree-widget = "0.22"

# Search
nucleo = "0.5"

# Serialization & config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utils
dirs = "5"
indicatif = "0.17"
blake3 = "1"
trash = "5"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
