[package]
name = "diskcopilot"
version = "0.2.0"
edition = "2021"
description = "Fast, accurate Mac disk scanner and query tool"

[[bin]]
name = "diskcopilot-cli"
path = "src/main.rs"

[lib]
name = "diskcopilot"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }

# Scanning
jwalk = "0.8"
rayon = "1"
crossbeam-channel = "0.5"

# Cache
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization & config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Web server
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# Utils
libc = "0.2"
dirs = "5"
indicatif = "0.17"
blake3 = "1"
trash = "5"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
